//
// Protocol buffers definition for Client-Server Communication
//
syntax = "proto3";
package pt.tecnico.hdlt.T25;

message SubmitLocationReportRequest {
  string key = 1;
  LocationMessage locationProver = 2;
  repeated LocationMessage locationProofs = 3;
}

message SubmitLocationReportResponse {
  string content = 1;
  string signature = 2;
}

message ObtainLocationReportRequest {
  string key = 1;
  string content = 2;
  string signature = 3;
}

message ObtainLocationReportResponse {
  string key = 1;
  LocationMessage locationProver = 2;
  repeated LocationMessage locationProofs = 3;
  string serverSignature = 4;
}

message ObtainUsersAtLocationRequest {
  string key = 1;
  string content = 2;
  string signature = 3;
}

message ObtainUsersAtLocationResponse {
  string key = 1;
  repeated ObtainLocationReportResponse locationReports = 2;
}

message LocationMessage {
  string content = 1;
  string signature = 2;
}

service LocationServerService {
  rpc submitLocationReport(SubmitLocationReportRequest) returns (SubmitLocationReportResponse);
  rpc obtainLocationReport(ObtainLocationReportRequest) returns (ObtainLocationReportResponse);
  rpc obtainUsersAtLocation(ObtainUsersAtLocationRequest) returns (ObtainUsersAtLocationResponse);
}
